# learning-langgraph-py

./: .gitignore  README.md
ambiant_agents_py/: agent_hitl.py  agent_practice.py  email_workflow.py  graph.py  langgraph.json  pyproject.toml
ambiant_agents_py/data/: request.json
introduction-review/: .gitignore  langgraph.json  pyproject.toml
introduction-review/src/email-agent/: graph.py
introduction-review/src/email-workflow/: graph.py
introduction-review/src/email-workflow/practice/: graph.py
