[project]
name = "ambiant-agents-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.4",
]

[tool.pyright]
typeCheckingMode = "basic"
